# Clinic_management

./: Dockerfile  docker-componse.yml  pyproject.toml
app/: main.py
app/config/: dependency.py
app/domain/entities/: service.py
app/domain/repository/: service_repository.py
app/infrastructure/database/: connection.py
app/infrastructure/database/models/: service_model.py
app/interface/mappers/: service_mapper.py
app/interface/schemas/: service_schema.py
