[project]
name = "clinic-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Sousa Silva",email = "ordnael.sousass@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pymysql (>=1.1.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
